[home] [css] - Fix theme styles for .navbar-inverse. Spacing between consecutive sections

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -263,7 +263,7 @@ section {
 
 /* Gallery */
 
-#gallery {
+.section-nospace {
   margin: 0px;
 }
 
